SubVersion: $Id$

To do:
- remove /proc/bus/usb from ticables2 => deprecated !

Log:

- 05/06/2006, version 0.1.1: roms
	- renamed stdints.h into stdints1.h
	- fixed ERR_INVALID_ARG in SilverLink (linux) support
	
- 29/05/2006, version 0.1.0: roms
	- reworked USB/PID retrieval to make it independant of handle 
	close/open/probe. Please note that API external behaviour 
	didn't change !
	- added USB PIDs values and support to the API
	- fixed bug in SilverLink/Win32 support: the API was not reentrant 
	=> violation in TiLP after probing
	- improved/extended ticables_probing_do
	- critical bug (>= 2.6.15): call usb_claim_interface before calling
	usb_set_configuration => wrong !
	- added '/dev/bus/usb' probing because '/proc/bus/usb' is being
	deprecated.
	
- 06/05/2006, version 0.0.9: roms
	- added ability to retrieve the USB hand-held connected from its PID
	- improved ticables_probing_do which can probes all cables or 
	  USB cables only (faster).
	- definitely fixed return value for probing functions
	- fixed link_xxx which returns -1 instead of ERR_NOT_OPEN. 
	  Thanks to Tyler Cassidy !

- 17/04/2006, version 0.0.8: roms
	- rewritten data logging system
	- embedded HEX to PKT D-BUS decompiler

- 07/03/2006, version 0.0.7: roms
	- ParallelLink support was not compiled under Windows
	- reset SilverLink cable when opened (like other cables)
	- close/re-open cable in slv_reset. Reseting is not enough on both 
	Linux & Windows.
	- reverted back to previous behaviour (reset instead of close/open)

- 20/02/2006, version 0.0.6: roms
	- error message is a glib allocated string for now
	- does not raise an error any longer if usb_set_configuration fails 
	(seems to be needed with latest lib-usb release...)

- 08/02/2006, version 0.0.5: roms
	- changed information message in check_for_libusb according to 
	  bug #1372369.

- 19/01/2006, version 0.0.4: roms
	- fixed bad error code in 'slv_prepare' for SilverLink
	- added a COM wrapper with VBA sample program