@@ -267,9 +267,9 @@ TIEXPORT int TICALL ticables_error_get(CableError number, char **message)
 	case ERR_LIBUSB_CLAIM:
 	case ERR_LIBUSB_CONFIG:
 		*message = g_strconcat(
-			_("Msg: unable to open USB device."),
+			_("Msg: failed to open USB device."),
 			"\n",
-			_("Cause: Check that your cable is connected or not stalled. Check your libusb and usbfs, too."),
+			_("Cause: check your USB cable is plugged and/or the calculator is ON! Check your libusb and usbfs, too."),
 			NULL);
 		break;
 
